src/scss/theme/_search.scss
.page-search__width-limit {
    width: 100%;
    max-width: 1200px;
    padding: 0 2.22em;
    margin: 0 auto;

    @include break(phablet) {
        padding: 0;
    }
}

.page-content__search {
    padding: 6em 2.22em;

    &-results {
        display: flex;
        justify-content: space-between;

        @include break(mobile) {
            flex-flow: column wrap;
        }

        &__left {

            span {
                font-size: 1.11rem;
                color: #979594;

                strong {
                    color: $secondaryColor;
                }
            }
        }

        &__right {

            span {
                font-size: 0.89rem;
                color: #b1b1b1;
            }
        }
    }

    &-item {
        border-bottom: 1px solid rgba(0,0,0, 0.05);
        padding: 1.78em 0;

        &:last-child {
            border-bottom: 0;
        }
    
        h2 {
            font-size: 1.39rem;
            margin-bottom: 0;

            a {
                text-decoration: none;
                color: $primaryColor;
            }
        }

        span {
            display: inline-block;
            font-size: 0.83rem;
            margin-bottom: 0.67em;

            a {
                color: #dbdbdb;
                font-weight: normal;
                text-decoration: none;
                word-break: break-all;
    
                &:hover {
                    color: $accentColor;
                }
            }
        }
    
        p {
            overflow: hidden;
        }
    
        @supports (-webkit-line-clamp: 2) {
            p {
                display: -webkit-box;
                -webkit-line-clamp: 2;
                -webkit-box-orient: vertical;
                max-height: none;
            }
        }
    }

    &-pagination {
        display: flex;
        justify-content: flex-end;
        margin-top: 1.33em;
    
        span {
            display: flex;
            justify-content: center;
            align-items: center;
            width: 32px;
            height: 32px;
            font-size: 0.78rem;
            color: #dbdbdb;
            margin-left: 8px;
            border: 1px solid #dbdbdb;
            border-radius: 4px;
        }
    
        a {
            display: flex;
            justify-content: center;
            align-items: center;
            width: 32px;
            height: 32px;
            font-size: 0.78rem;
            margin-left: 8px;
            color: $secondaryColor;
            border: 1px solid $secondaryColor;
            text-decoration: none;
            border-radius: 4px;
            transition: all 0.4s ease;

            &:hover {
                color: #fff;
                background: $accentColor;
                border-color: $accentColor;
            }
        }

        a.next, a.prev {
            display: flex;
            justify-content: center;
            align-items: center;
            width: unset;
            height: 32px; 
            padding: 0 8px;
        }
    }
}

